# cpp-trading-engine

./: .gitignore  CMakeLists.txt  CMakeLists_simple.txt  README.md  build.sh  push_to_github.sh  run.sh  setup.sh  setup_github.sh  test_backend.cpp  test_risk_limits.cpp
assets/: SCREENSHOT_GUIDE.md
src/: main.cpp  test_risk.cpp
src/gui/: Dashboard.cpp  Dashboard.h
src/market_data/: WebSocketClient.cpp  WebSocketClient.h
src/order_book/: Order.h  OrderBook.cpp  OrderBook.h  Trade.h
src/risk/: RiskEngine.cpp  RiskEngine.h
tests/: test_order_book.cpp
